content/docs/v0.0.1/reference/azurerm.kubeform.com/DnsCnameRecord.md
---
title: DnsCnameRecord
menu:
  docs_v0.0.1:
    identifier: dnscnamerecord-azurerm.kubeform.com
    name: DnsCnameRecord
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## DnsCnameRecord
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `DnsCnameRecord` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[DnsCnameRecordSpec](#DnsCnameRecordSpec)***||
| `status` | ***[DnsCnameRecordStatus](#DnsCnameRecordStatus)***||
## DnsCnameRecordSpec
##### (Appears on:[DnsCnameRecord](#DnsCnameRecord), [DnsCnameRecordStatus](#DnsCnameRecordStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `name` | ***string***||
| `record` | ***string***||
| `resourceGroupName` | ***string***||
| `tags` | ***map[string]string***| ***(Optional)*** |
| `ttl` | ***int***||
| `zoneName` | ***string***||
## DnsCnameRecordStatus
##### (Appears on:[DnsCnameRecord](#DnsCnameRecord))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[DnsCnameRecordSpec](#DnsCnameRecordSpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
